spec/invalid/unclosed_parans.expr.diagnostics
[
    Diagnostic {
        severity: Error,
        code: Some(
            "syntax",
        ),
        message: "unexpected end of file; expected: [\"\\\"(\\\"\", \"number\"]",
        labels: [
            Label {
                style: Primary,
                file_id: (),
                range: 1..1,
                message: "",
            },
        ],
        notes: [],
    },
]